# narayan-designer

./: .gitignore  Authors  ChangeLog  Makefile.am  Makefile.in  News  ReadMe  aclocal.m4  apport.py  configure  configure.ac
Data/: AboutDialog.ui  MainWindow.ui  Makefile.am  Makefile.in  Menus.ui  PreferencesDialog.ui  com.cartesiantheatre.narayan-designer.desktop.in  com.cartesiantheatre.narayan-designer.desktop.in.in  com.cartesiantheatre.narayan-designer.gresource.xml  com.cartesiantheatre.narayan-designer.gschema.xml  magic  narayan-designer.xml
Data/Examples/: Simple.narayan
Data/GtkBuilder/: MainWindow.ui  UnitEditorDialog.ui
Macros/: ax_tls.m4  ax_var_pop.m4  ax_var_push.m4
Manual/: narayan-designer  narayan-designer.man.in
Patches/: lexer-add-token-definitions.patch  lexer-fix-unused-variables.patch  parser-fix-polymorphic-copy-constructor.patch  parser-fix-thread-local.patch  parser-fix-unused-variables.patch  series
Source/: AboutDialog.cpp  CommandLineOptions.cpp  CommandLineOptions.h  EditorSourceCodePage.cpp  EditorSourceCodePage.h  Main.cpp  MainWindow.cpp  MainWindow.h  Makefile.am  Makefile.in  NarayanDesignerApplication.cpp  NarayanLogicLexer.ih  NarayanLogicLexer.lpp  NarayanLogicParser.ih  NarayanLogicParser.ypp  NarayanLogicParserPreinclude.h  PreferencesDialog.cpp  UnitEditorDialog.cpp  UnitEditorDialog.h  Version.h.in  config.h.in
Source/Compiler/: NarayanLogicLexer.h  NarayanLogicLexer.ih  NarayanLogicLexer.lpp  NarayanLogicParser.h  NarayanLogicParser.ih  NarayanLogicParser.ypp  NarayanLogicParserPreinclude.h  lexer-fix.patch  parser-fix.patch
Source/GUI/: AboutDialog.cpp  AboutDialog.h  MainWindow.cpp  MainWindow.h  PreferencesDialog.cpp  PreferencesDialog.h  UnitEditorDialog.cpp  UnitEditorDialog.h
Source/Main/: CommandLineOptions.cpp  CommandLineOptions.h  Main.cpp  NarayanDesignerApplication.cpp  NarayanDesignerApplication.h  Version.h.in  config.h.in
Source/Patterns/: ExplicitSingleton.h
Tests/: GrowGrass.nl  Makefile.am  Makefile.in  TestLexer.cpp  TestParser.cpp
Tests/Rules/Map/: GrowGrass.nl
Tests/Rules/Unit/: CreateAlloy.nl  GoToWork.nl  MustardFactory.nl  ProducePower.nl
Tests/Rules/Zone/: DevelopHouses.nl
Tests/Scripts/: GrowGrass.nl
Translations/: ChangeLog  LINGUAS  Makevars  POTFILES.in  narayan-designer.pot
debian/: changelog  control  copyright  docs  examples  files  lintian-overrides  mime  rules  watch
debian/pbuilder-hooks/: C10shell
